test/conformance/chainsaw/lease/background-controller/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: background-controller-lease
spec:
  concurrent: true
  steps:
  - try:
    - assert:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            namespace: kyverno
            labels:
              app.kubernetes.io/component: background-controller
              app.kubernetes.io/instance: kyverno
              app.kubernetes.io/part-of: kyverno
          status:
            (containerStatuses[?name == 'controller']):
            - ready: true
              restartCount: 0
    - patch:
        resource:
          apiVersion: coordination.k8s.io/v1
          kind: Lease
          metadata:
            name: kyverno-background-controller
            namespace: kyverno
          spec:
            holderIdentity: foo
    - assert:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            namespace: kyverno
            labels:
              app.kubernetes.io/component: background-controller
              app.kubernetes.io/instance: kyverno
              app.kubernetes.io/part-of: kyverno
          status:
            (containerStatuses[?name == 'controller']):
            - ready: true
              restartCount: 1
